packages/webapp/deploy/boilerplate/deployment.yaml
# DO NOT EDIT THIS FILE MANUALLY in order to avoid blueprint update issues!
# This file is maintained within the upstream kpt package (see Kptfile).
# Please maintain project-specific changes within the base kustomization.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blueprint # kpt-set: ${name}
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webapp
    spec:
      serviceAccountName: blueprint # kpt-set: ${name}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: app
        image: nginxdemos/nginx-hello:0.2 # kpt-set: ${image-name}:${image-tag}
        imagePullPolicy: IfNotPresent
        env: []
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 32Mi
        ports:
        - containerPort: 8080 # kpt-set: ${port}
        livenessProbe:
          httpGet:
            path: "/healthz" # kpt-set: ${healthcheck}
            port: 8080 # kpt-set: ${port}
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: "/healthz" # kpt-set: ${healthcheck}
            port: 8080 # kpt-set: ${port}
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 2
