packages/webapp/deploy/boilerplate/service.yaml
# DO NOT EDIT THIS FILE MANUALLY in order to avoid blueprint update issues!
# This file is maintained within the upstream kpt package (see Kptfile).
# Please maintain project-specific changes within the base kustomization.
apiVersion: v1
kind: Service
metadata:
  name: blueprint # kpt-set: ${name}
spec:
  type: ClusterIP
  ports:
  - port: 8080 # kpt-set: ${port}
    targetPort: 8080 # kpt-set: ${port}
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: webapp
